--- a/hutool-db/pom.xml
+++ b/hutool-db/pom.xml
@@ -25,7 +25,8 @@
 		<hikariCP.version>2.4.13</hikariCP.version>
 		<mongo.version>3.12.10</mongo.version>
 		<sqlite.version>3.36.0.1</sqlite.version>
-		<hsqldb.version>2.6.0</hsqldb.version>
+		<!-- 此处固定2.5.x，支持到JDK8 -->
+		<hsqldb.version>2.5.2</hsqldb.version>
 		<jedis.version>3.6.3</jedis.version>
 	</properties>
 
