--- a/hutool-system/pom.xml
+++ b/hutool-system/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.7.10-SNAPSHOT</version>
+		<version>5.7.10</version>
 	</parent>
 
 	<artifactId>hutool-system</artifactId>
