--- a/hutool-script/pom.xml
+++ b/hutool-script/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.7.11-SNAPSHOT</version>
+		<version>5.7.11</version>
 	</parent>
 
 	<artifactId>hutool-script</artifactId>
