--- a/hutool-all/pom.xml
+++ b/hutool-all/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.7.11</version>
+		<version>5.7.12-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>hutool-all</artifactId>
