--- a/hutool-db/pom.xml
+++ b/hutool-db/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.7.12-SNAPSHOT</version>
+		<version>5.7.12</version>
 	</parent>
 
 	<artifactId>hutool-db</artifactId>
@@ -27,7 +27,7 @@
 		<sqlite.version>3.36.0.3</sqlite.version>
 		<!-- 此处固定2.5.x，支持到JDK8 -->
 		<hsqldb.version>2.5.2</hsqldb.version>
-		<jedis.version>3.6.3</jedis.version>
+		<jedis.version>3.7.0</jedis.version>
 	</properties>
 
 	<dependencies>
