--- a/hutool-bloomFilter/pom.xml
+++ b/hutool-bloomFilter/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.7.13-SNAPSHOT</version>
+		<version>5.7.13</version>
 	</parent>
 
 	<artifactId>hutool-bloomFilter</artifactId>
