增加导出word工具类

--- a/hutool-poi/pom.xml
+++ b/hutool-poi/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>hutool-log</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-script</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
 
 		<!-- POI -->
 		<dependency>
