fix: 修复编译时hutool-log模块报 "找不到包org.apache.logging.log4j"的错误

--- a/hutool-log/pom.xml
+++ b/hutool-log/pom.xml
@@ -61,6 +61,12 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j2.version}</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>${commons-logging.version}</version>
