--- a/hutool-bom/pom.xml
+++ b/hutool-bom/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.7.18-SNAPSHOT</version>
+		<version>5.7.18</version>
 	</parent>
 
 	<artifactId>hutool-bom</artifactId>
