测试时指定时区

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
+				<configuration>
+					<systemPropertyVariables>
+						<user.timezone>Asia/Shanghai</user.timezone>
+					</systemPropertyVariables>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
