基于SSHJ框架SFTP实现

--- a/hutool-extra/pom.xml
+++ b/hutool-extra/pom.xml
@@ -26,6 +26,7 @@
 		<thymeleaf.version>3.0.14.RELEASE</thymeleaf.version>
 		<mail.version>1.6.2</mail.version>
 		<jsch.version>0.1.55</jsch.version>
+		<sshj.version>0.32.0</sshj.version>
 		<zxing.version>3.4.1</zxing.version>
 		<net.version>3.8.0</net.version>
 		<emoji-java.version>5.1.1</emoji-java.version>
@@ -133,6 +134,13 @@
 			<groupId>com.jcraft</groupId>
 			<artifactId>jsch</artifactId>
 			<version>${jsch.version}</version>
+			<scope>compile</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.hierynomus</groupId>
+			<artifactId>sshj</artifactId>
+			<version>${sshj.version}</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
