--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.1.1</version>
+				<configuration>
+					<failOnError>false</failOnError>
+					<failOnWarnings>false</failOnWarnings>
+				</configuration>
 				<executions>
 					<execution>
 						<phase>package</phase>
