--- a/hutool-aop/pom.xml
+++ b/hutool-aop/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.7.19</version>
+		<version>5.7.20-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>hutool-aop</artifactId>
