--- a/hutool-poi/pom.xml
+++ b/hutool-poi/pom.xml
@@ -14,7 +14,7 @@
 
 	<artifactId>hutool-poi</artifactId>
 	<name>${project.artifactId}</name>
-	<description>Hutool POI工具类（对MS Office操作）</description>
+	<description>Hutool POI工具类（对Office文档、OFD等操作）</description>
 
 	<properties>
 		<!-- versions -->
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.ofdrw</groupId>
 			<artifactId>ofdrw-full</artifactId>
-			<version>1.17.8</version>
+			<version>1.17.9</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
