--- a/hutool-http/pom.xml
+++ b/hutool-http/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.7.22</version>
+		<version>5.7.23-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>hutool-http</artifactId>
