--- a/hutool-db/pom.xml
+++ b/hutool-db/pom.xml
@@ -23,7 +23,8 @@
 		<tomcat-jdbc.version>10.0.14</tomcat-jdbc.version>
 		<druid.version>1.2.8</druid.version>
 		<hikariCP.version>2.4.13</hikariCP.version>
-		<mongo.version>4.5.0</mongo.version>
+		<mongo.version>3.12.10</mongo.version>
+		<mongo4.version>4.5.0</mongo4.version>
 		<sqlite.version>3.36.0.3</sqlite.version>
 		<!-- 此处固定2.5.x，支持到JDK8 -->
 		<hsqldb.version>2.5.2</hsqldb.version>
@@ -99,8 +100,14 @@
 		<!-- MongoDB Java客户端 -->
 		<dependency>
 			<groupId>org.mongodb</groupId>
-			<artifactId>mongodb-driver-sync</artifactId>
+			<artifactId>mongo-java-driver</artifactId>
 			<version>${mongo.version}</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver-sync</artifactId>
+			<version>${mongo4.version}</version>
 			<optional>true</optional>
 		</dependency>
 		<!-- Redis Java客户端 -->
