--- a/hutool-json/pom.xml
+++ b/hutool-json/pom.xml
@@ -31,6 +31,7 @@
 			<groupId>cn.hutool</groupId>
 			<artifactId>hutool-crypto</artifactId>
 			<version>${project.parent.version}</version>
+			<optional>true</optional>
 		</dependency>
 		<!-- 测试特殊算法 -->
 		<dependency>
