--- a/pom.xml
+++ b/pom.xml
@@ -36,15 +36,15 @@
 
 		<!-- versions -->
 		<compile.version>8</compile.version>
-		<junit.version>4.13.2</junit.version>
+		<junit.version>5.8.2</junit.version>
 		<lombok.version>1.18.24</lombok.version>
 	</properties>
 
 	<dependencies>
 		<!-- 全局单元测试 -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
