--- a/hutool-json/pom.xml
+++ b/hutool-json/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.8.0</version>
+		<version>5.8.1.M1</version>
 	</parent>
 
 	<artifactId>hutool-json</artifactId>
