feat: json数据格式转换(下划线转驼峰 or 驼峰转下划线)

--- a/hutool-json/pom.xml
+++ b/hutool-json/pom.xml
@@ -22,5 +22,9 @@
 			<artifactId>hutool-core</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+		</dependency>
 	</dependencies>
 </project>
