--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 		<compile.version>8</compile.version>
 		<junit.version>4.13.2</junit.version>
 		<lombok.version>1.18.24</lombok.version>
+		<fastjson.version>1.2.70</fastjson.version>
 	</properties>
 
 	<dependencies>
@@ -60,6 +61,17 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
