update mail package

--- a/hutool-extra/pom.xml
+++ b/hutool-extra/pom.xml
@@ -140,11 +140,17 @@
 
 		<!-- 邮件 -->
 		<dependency>
-			<groupId>com.sun.mail</groupId>
-			<artifactId>javax.mail</artifactId>
-			<version>${mail.version}</version>
+			<groupId>jakarta.mail</groupId>
+			<artifactId>jakarta.mail-api</artifactId>
+			<version>2.1.0</version>
 			<scope>compile</scope>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>jakarta.mail</artifactId>
+			<version>2.0.1</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- SSH安全连接所使用的类库 -->
