--- a/hutool-aop/pom.xml
+++ b/hutool-aop/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.8.1</version>
+		<version>5.8.2.M1</version>
 	</parent>
 
 	<artifactId>hutool-aop</artifactId>
