--- a/hutool-log/pom.xml
+++ b/hutool-log/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.8.4.M1</version>
+		<version>5.8.4</version>
 	</parent>
 
 	<artifactId>hutool-log</artifactId>
@@ -26,7 +26,7 @@
 		<tinylog.version>1.3.6</tinylog.version>
 		<!-- 此处固定3.4.x，支持到jdk8 -->
 		<jboss-logging.version>3.4.3.Final</jboss-logging.version>
-		<logtube.version>0.43.2</logtube.version>
+		<logtube.version>0.43.4</logtube.version>
 	</properties>
 
 	<dependencies>
