--- a/hutool-log/pom.xml
+++ b/hutool-log/pom.xml
@@ -21,9 +21,10 @@
 		<slf4j.version>1.7.36</slf4j.version>
 		<logback.version>1.3.0-alpha5</logback.version>
 		<log4j.version>1.2.17</log4j.version>
-		<log4j2.version>2.17.2</log4j2.version>
+		<log4j2.version>2.18.0</log4j2.version>
 		<commons-logging.version>1.2</commons-logging.version>
 		<tinylog.version>1.3.6</tinylog.version>
+		<!-- 固定3.4.x，支持到jdk8 -->
 		<jboss-logging.version>3.4.3.Final</jboss-logging.version>
 		<logtube.version>0.43.2</logtube.version>
 	</properties>
