--- a/hutool-log/pom.xml
+++ b/hutool-log/pom.xml
@@ -19,7 +19,7 @@
 	<properties>
 		<!-- versions -->
 		<slf4j.version>1.7.36</slf4j.version>
-		<logback.version>1.3.0-alpha5</logback.version>
+		<logback.version>1.4.0</logback.version>
 		<log4j.version>1.2.17</log4j.version>
 		<log4j2.version>2.17.2</log4j2.version>
 		<commons-logging.version>1.2</commons-logging.version>
