--- a/hutool-log/pom.xml
+++ b/hutool-log/pom.xml
@@ -19,7 +19,8 @@
 	<properties>
 		<!-- versions -->
 		<slf4j.version>2.0.0</slf4j.version>
-		<logback.version>1.4.0</logback.version>
+		<!-- 固定1.3.x，支持到jdk8 -->
+		<logback.version>1.3.0</logback.version>
 		<log4j.version>1.2.17</log4j.version>
 		<log4j2.version>2.18.0</log4j2.version>
 		<commons-logging.version>1.2</commons-logging.version>
@@ -76,7 +77,7 @@
 		<dependency>
 			<groupId>org.tinylog</groupId>
 			<artifactId>tinylog-api</artifactId>
-			<version>2.4.1</version>
+			<version>2.5.0</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -102,7 +103,7 @@
 		<dependency>
 			<groupId>org.tinylog</groupId>
 			<artifactId>tinylog-impl</artifactId>
-			<version>2.4.1</version>
+			<version>2.5.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
