--- a/hutool-script/pom.xml
+++ b/hutool-script/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.8.8</version>
+		<version>5.8.9.M1</version>
 	</parent>
 
 	<artifactId>hutool-script</artifactId>
