--- a/hutool-http/pom.xml
+++ b/hutool-http/pom.xml
@@ -73,5 +73,11 @@
 			<version>1.7.25</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>mockwebserver</artifactId>
+			<version>4.10.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
