--- a/hutool-core/src/test/resources/multi_line.properties
+++ b/hutool-core/src/test/resources/multi_line.properties
@@ -1,27 +1,5 @@
-client.mode=single
-configure={\
-            "singleServerConfig":{\
-                "idleConnectionTimeout":10000,\
-                "pingTimeout":1000, \
-                "connectTimeout":10000, \
-                "timeout":3000,\
-                "retryAttempts":3,\
-                "retryInterval":1500,\
-                "reconnectionTimeout":3000,\
-                "failedAttempts":3,\
-                "password":null,\
-                "subscriptionsPerConnection":5,\
-                "clientName":null,\
-                "address": "redis://127.0.0.1:6379",\
-                "subscriptionConnectionMinimumIdleSize":1,\
-                "subscriptionConnectionPoolSize":50,\
-                "connectionMinimumIdleSize":12,\
-                "connectionPoolSize":12\
-            },\
-            "threads":2,\
-            "nettyThreads":2,\
-            "codec":{\
-                "class":"org.redisson.client.codec.StringCodec"\
-            },\
-            "transportMode":"NIO"\
-       }
+test1
+test2=a\
+  bc\
+  d\\e
+test3=abc
