--- a/hutool-log/pom.xml
+++ b/hutool-log/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.8.11.M1</version>
+		<version>5.8.11</version>
 	</parent>
 
 	<artifactId>hutool-log</artifactId>
@@ -19,14 +19,14 @@
 	<properties>
 		<!-- versions -->
 		<slf4j.version>1.7.36</slf4j.version>
-		<logback.version>1.4.4</logback.version>
+		<logback.version>1.4.5</logback.version>
 		<log4j.version>1.2.17</log4j.version>
 		<log4j2.version>2.19.0</log4j2.version>
 		<commons-logging.version>1.2</commons-logging.version>
 		<tinylog.version>1.3.6</tinylog.version>
 		<!-- 此处固定3.4.x，支持到jdk8 -->
 		<jboss-logging.version>3.4.3.Final</jboss-logging.version>
-		<logtube.version>0.44.3</logtube.version>
+		<logtube.version>0.45.0</logtube.version>
 	</properties>
 
 	<dependencies>
