--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,25 @@
 						</executions>
 					</plugin>
 					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jar-plugin</artifactId>
+						<configuration>
+							<archive>
+								<index>true</index>
+								<manifest>
+									<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+								</manifest>
+								<manifestEntries>
+									<Build-OS>${os.name}</Build-OS>
+									<Built-By>${user.name}</Built-By>
+									<Build-Jdk>${java.version}</Build-Jdk>
+									<Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
+									<Automatic-Module-Name>${project.artifactId}</Automatic-Module-Name>
+								</manifestEntries>
+							</archive>
+						</configuration>
+					</plugin>
+					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>versions-maven-plugin</artifactId>
 						<configuration>
