fix(pom):修复Automatic-Module-Name属性中新版本不能出现'-'

--- a/hutool-all/pom.xml
+++ b/hutool-all/pom.xml
@@ -16,7 +16,9 @@
 	<name>${project.artifactId}</name>
 	<description>Hutool是一个小而全的Java工具类库，通过静态方法封装，降低相关API的学习成本，提高工作效率，使Java拥有函数式语言般的优雅，让Java语言也可以“甜甜的”。</description>
 	<url>https://github.com/looly/hutool</url>
-
+	<properties>
+		<Automatic-Module-Name>cn.hutool.hutool.all</Automatic-Module-Name>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>cn.hutool</groupId>
