--- a/hutool-log/pom.xml
+++ b/hutool-log/pom.xml
@@ -27,6 +27,7 @@
 		<!-- 此处固定3.4.x，支持到jdk8 -->
 		<jboss-logging.version>3.4.3.Final</jboss-logging.version>
 		<logtube.version>0.45.0</logtube.version>
+		<Automatic-Module-Name>cn.hutool.hutool.log</Automatic-Module-Name>
 	</properties>
 
 	<dependencies>
