--- a/hutool-socket/pom.xml
+++ b/hutool-socket/pom.xml
@@ -15,6 +15,9 @@
 	<artifactId>hutool-socket</artifactId>
 	<name>${project.artifactId}</name>
 	<description>Hutool套接字，包括BIO、NIO、AIO封装</description>
+	<properties>
+		<Automatic-Module-Name>cn.hutool.hutool.socket</Automatic-Module-Name>
+	</properties>
 
 	<dependencies>
 		<dependency>
