--- a/hutool-http/pom.xml
+++ b/hutool-http/pom.xml
@@ -15,7 +15,9 @@
 	<artifactId>hutool-http</artifactId>
 	<name>${project.artifactId}</name>
 	<description>Hutool Http客户端</description>
-
+	<properties>
+		<Automatic-Module-Name>cn.hutool.hutool.http</Automatic-Module-Name>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>cn.hutool</groupId>
