--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<version>${lombok.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.drewnoakes</groupId>
+			<artifactId>metadata-extractor</artifactId>
+			<version>2.18.0</version>
+		</dependency>
 	</dependencies>
 
 	<issueManagement>
