[fixbug]:  修复图片压缩自动旋转问题 #2923

--- a/hutool-swing/pom.xml
+++ b/hutool-swing/pom.xml
@@ -22,5 +22,10 @@
 			<artifactId>hutool-core</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.drewnoakes</groupId>
+			<artifactId>metadata-extractor</artifactId>
+			<version>2.18.0</version>
+		</dependency>
 	</dependencies>
 </project>
