--- a/hutool-core/pom.xml
+++ b/hutool-core/pom.xml
@@ -16,4 +16,8 @@
 	<name>${project.artifactId}</name>
 	<description>Hutool核心，包括集合、字符串、Bean等工具</description>
 
+	<properties>
+		<Automatic-Module-Name>cn.hutool.core</Automatic-Module-Name>
+	</properties>
+
 </project>
