--- a/hutool-cron/pom.xml
+++ b/hutool-cron/pom.xml
@@ -16,6 +16,10 @@
 	<name>${project.artifactId}</name>
 	<description>Hutool 定时任务</description>
 
+	<properties>
+		<Automatic-Module-Name>cn.hutool.cron</Automatic-Module-Name>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>cn.hutool</groupId>
