--- a/hutool-setting/pom.xml
+++ b/hutool-setting/pom.xml
@@ -16,6 +16,10 @@
 	<name>${project.artifactId}</name>
 	<description>Hutool 配置文件增强</description>
 
+	<properties>
+		<Automatic-Module-Name>cn.hutool.setting</Automatic-Module-Name>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>cn.hutool</groupId>
