--- a/hutool-socket/pom.xml
+++ b/hutool-socket/pom.xml
@@ -16,6 +16,10 @@
 	<name>${project.artifactId}</name>
 	<description>Hutool套接字，包括BIO、NIO、AIO封装</description>
 
+	<properties>
+		<Automatic-Module-Name>cn.hutool.socket</Automatic-Module-Name>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>cn.hutool</groupId>
