--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 	<properties>
 		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
+		<Automatic-Module-Name>cn.hutool</Automatic-Module-Name>
 
 		<!-- versions -->
 		<compile.version>8</compile.version>
