[fixbug]: optional 设置为true 表示该依赖是可选的 项目之间依赖不传递

--- a/hutool-swing/pom.xml
+++ b/hutool-swing/pom.xml
@@ -26,6 +26,7 @@
 			<groupId>com.drewnoakes</groupId>
 			<artifactId>metadata-extractor</artifactId>
 			<version>2.18.0</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 </project>
