--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
 							<Built-By>${user.name}</Built-By>
 							<Build-Jdk>${java.version}</Build-Jdk>
 							<Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
-							<Automatic-Module-Name>cn.hutool.aop</Automatic-Module-Name>
+							<Automatic-Module-Name>${Automatic-Module-Name}</Automatic-Module-Name>
 						</manifestEntries>
 					</archive>
 				</configuration>
