--- a/hutool-log/pom.xml
+++ b/hutool-log/pom.xml
@@ -26,6 +26,7 @@
 		<log4j2.version>2.19.0</log4j2.version>
 		<commons-logging.version>1.2</commons-logging.version>
 		<tinylog.version>1.3.6</tinylog.version>
+		<tinylog2.version>2.6.0</tinylog2.version>
 		<!-- 固定3.4.x，支持到jdk8 -->
 		<jboss-logging.version>3.4.3.Final</jboss-logging.version>
 		<logtube.version>0.44.3</logtube.version>
@@ -78,7 +79,7 @@
 		<dependency>
 			<groupId>org.tinylog</groupId>
 			<artifactId>tinylog-api</artifactId>
-			<version>2.5.0</version>
+			<version>${tinylog2.version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -104,7 +105,7 @@
 		<dependency>
 			<groupId>org.tinylog</groupId>
 			<artifactId>tinylog-impl</artifactId>
-			<version>2.5.0</version>
+			<version>${tinylog2.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
