--- a/hutool-json/pom.xml
+++ b/hutool-json/pom.xml
@@ -41,6 +41,12 @@
 			<version>${bouncycastle.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba.fastjson2</groupId>
+			<artifactId>fastjson2</artifactId>
+			<version>2.0.24</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
